GladiusUnity2021/ModelImporter/Assets/Scripts/ANTLRgenerated/GladiusClassDefParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GladiusClassDef.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class GladiusClassDefParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, WS=24, INT=25, 
		FLOAT=26, COMMA=27, UNDERSCORE=28, DASH=29, LTHAN=30, GTHAN=31, PERIOD=32, 
		STRING=33, SINGLELINE_COMMENT=34;
	public const int
		RULE_root = 0, RULE_createClass = 1, RULE_displayName = 2, RULE_descriptionId = 3, 
		RULE_unitSet = 4, RULE_skillUse = 5, RULE_voiceLinePrefix = 6, RULE_soundTable = 7, 
		RULE_mesh = 8, RULE_classIcon = 9, RULE_headIcon = 10, RULE_gridSize = 11, 
		RULE_xpAward = 12, RULE_itemSizes = 13, RULE_itemSubSize = 14, RULE_attribute = 15, 
		RULE_itemCat = 16, RULE_levelUpXpNeeded = 17, RULE_levelUpJPGiven = 18, 
		RULE_levelStatAwards = 19, RULE_levelZeroStats = 20, RULE_affinity = 21, 
		RULE_rockScissorsPaper = 22, RULE_fx = 23, RULE_derivationClass = 24, 
		RULE_compileUnit = 25;
	public static readonly string[] ruleNames = {
		"root", "createClass", "displayName", "descriptionId", "unitSet", "skillUse", 
		"voiceLinePrefix", "soundTable", "mesh", "classIcon", "headIcon", "gridSize", 
		"xpAward", "itemSizes", "itemSubSize", "attribute", "itemCat", "levelUpXpNeeded", 
		"levelUpJPGiven", "levelStatAwards", "levelZeroStats", "affinity", "rockScissorsPaper", 
		"fx", "derivationClass", "compileUnit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'CREATECLASS:'", "'DISPLAYNAMEID:'", "'DESCRIPTIONID:'", "'UNITSETNAME:'", 
		"'SKILLUSENAME:'", "'VOICELINEPREFIX:'", "'SOUNDTABLENAME:'", "'MESH:'", 
		"'CLASSICON:'", "'HEADICON:'", "'GRIDSIZE:'", "'XPAWARD:'", "'ITEMSIZES:'", 
		"'ATTRIBUTE:'", "'ITEMCAT:'", "'LEVELUPXPNEEDED:'", "'LEVELUPJPGIVEN:'", 
		"'LEVELSTATAWARDS:'", "'LEVELZEROSTATS:'", "'AFFINITY:'", "'ROCKSCISSORSPAPER:'", 
		"'FX:'", "'DERIVATIONCLASSNAME:'", null, null, null, "','", "'_'", "'-'", 
		"'<'", "'>'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"WS", "INT", "FLOAT", "COMMA", "UNDERSCORE", "DASH", "LTHAN", "GTHAN", 
		"PERIOD", "STRING", "SINGLELINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GladiusClassDef.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GladiusClassDefParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GladiusClassDefParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GladiusClassDefParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CreateClassContext[] createClass() {
			return GetRuleContexts<CreateClassContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CreateClassContext createClass(int i) {
			return GetRuleContext<CreateClassContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 52;
				createClass();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateClassContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DisplayNameContext displayName() {
			return GetRuleContext<DisplayNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DescriptionIdContext descriptionId() {
			return GetRuleContext<DescriptionIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnitSetContext unitSet() {
			return GetRuleContext<UnitSetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkillUseContext skillUse() {
			return GetRuleContext<SkillUseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VoiceLinePrefixContext voiceLinePrefix() {
			return GetRuleContext<VoiceLinePrefixContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SoundTableContext soundTable() {
			return GetRuleContext<SoundTableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MeshContext mesh() {
			return GetRuleContext<MeshContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DerivationClassContext derivationClass() {
			return GetRuleContext<DerivationClassContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeadIconContext headIcon() {
			return GetRuleContext<HeadIconContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassIconContext classIcon() {
			return GetRuleContext<ClassIconContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GridSizeContext gridSize() {
			return GetRuleContext<GridSizeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public XpAwardContext xpAward() {
			return GetRuleContext<XpAwardContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemSizesContext itemSizes() {
			return GetRuleContext<ItemSizesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AffinityContext affinity() {
			return GetRuleContext<AffinityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext[] attribute() {
			return GetRuleContexts<AttributeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute(int i) {
			return GetRuleContext<AttributeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RockScissorsPaperContext rockScissorsPaper() {
			return GetRuleContext<RockScissorsPaperContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemCatContext[] itemCat() {
			return GetRuleContexts<ItemCatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemCatContext itemCat(int i) {
			return GetRuleContext<ItemCatContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FxContext[] fx() {
			return GetRuleContexts<FxContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FxContext fx(int i) {
			return GetRuleContext<FxContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelUpXpNeededContext levelUpXpNeeded() {
			return GetRuleContext<LevelUpXpNeededContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelUpJPGivenContext levelUpJPGiven() {
			return GetRuleContext<LevelUpJPGivenContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelStatAwardsContext[] levelStatAwards() {
			return GetRuleContexts<LevelStatAwardsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelStatAwardsContext levelStatAwards(int i) {
			return GetRuleContext<LevelStatAwardsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelZeroStatsContext levelZeroStats() {
			return GetRuleContext<LevelZeroStatsContext>(0);
		}
		public CreateClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createClass; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterCreateClass(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitCreateClass(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCreateClass(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CreateClassContext createClass() {
		CreateClassContext _localctx = new CreateClassContext(Context, State);
		EnterRule(_localctx, 2, RULE_createClass);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			Match(T__0);
			State = 58;
			Match(STRING);
			State = 59;
			displayName();
			State = 60;
			descriptionId();
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 61;
				unitSet();
				}
			}

			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4) {
				{
				State = 64;
				skillUse();
				}
			}

			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 67;
				voiceLinePrefix();
				}
			}

			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 70;
				soundTable();
				}
			}

			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 73;
				mesh();
				}
			}

			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__22) {
				{
				State = 76;
				derivationClass();
				}
			}

			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 79;
				headIcon();
				}
			}

			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 82;
				classIcon();
				}
			}

			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 85;
				gridSize();
				}
			}

			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 88;
				xpAward();
				}
			}

			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__12) {
				{
				State = 91;
				itemSizes();
				}
			}

			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__19) {
				{
				State = 94;
				affinity();
				}
			}

			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__13) {
				{
				{
				State = 97;
				attribute();
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__20) {
				{
				State = 103;
				rockScissorsPaper();
				}
			}

			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__14) {
				{
				{
				State = 106;
				itemCat();
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__21) {
				{
				{
				State = 112;
				fx();
				}
				}
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__15) {
				{
				State = 118;
				levelUpXpNeeded();
				}
			}

			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__16) {
				{
				State = 121;
				levelUpJPGiven();
				}
			}

			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__17) {
				{
				{
				State = 124;
				levelStatAwards();
				}
				}
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18) {
				{
				State = 130;
				levelZeroStats();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DisplayNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusClassDefParser.INT, 0); }
		public DisplayNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_displayName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterDisplayName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitDisplayName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDisplayName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DisplayNameContext displayName() {
		DisplayNameContext _localctx = new DisplayNameContext(Context, State);
		EnterRule(_localctx, 4, RULE_displayName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			Match(T__1);
			State = 134;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DescriptionIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(GladiusClassDefParser.INT, 0); }
		public DescriptionIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_descriptionId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterDescriptionId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitDescriptionId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDescriptionId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DescriptionIdContext descriptionId() {
		DescriptionIdContext _localctx = new DescriptionIdContext(Context, State);
		EnterRule(_localctx, 6, RULE_descriptionId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			Match(T__2);
			State = 137;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnitSetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		public UnitSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unitSet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterUnitSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitUnitSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnitSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnitSetContext unitSet() {
		UnitSetContext _localctx = new UnitSetContext(Context, State);
		EnterRule(_localctx, 8, RULE_unitSet);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(T__3);
			State = 140;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SkillUseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		public SkillUseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skillUse; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterSkillUse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitSkillUse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSkillUse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SkillUseContext skillUse() {
		SkillUseContext _localctx = new SkillUseContext(Context, State);
		EnterRule(_localctx, 10, RULE_skillUse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(T__4);
			State = 143;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VoiceLinePrefixContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		public VoiceLinePrefixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_voiceLinePrefix; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterVoiceLinePrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitVoiceLinePrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVoiceLinePrefix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VoiceLinePrefixContext voiceLinePrefix() {
		VoiceLinePrefixContext _localctx = new VoiceLinePrefixContext(Context, State);
		EnterRule(_localctx, 12, RULE_voiceLinePrefix);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(T__5);
			State = 146;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SoundTableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		public SoundTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_soundTable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterSoundTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitSoundTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSoundTable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SoundTableContext soundTable() {
		SoundTableContext _localctx = new SoundTableContext(Context, State);
		EnterRule(_localctx, 14, RULE_soundTable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			Match(T__6);
			State = 149;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MeshContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GladiusClassDefParser.STRING, 0); }
		public MeshContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mesh; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.EnterMesh(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGladiusClassDefListener typedListener = listener as IGladiusClassDefListener;
			if (typedListener != null) typedListener.ExitMesh(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGladiusClassDefVisitor<TResult> typedVisitor = visitor as IGladiusClassDefVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMesh(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MeshContext mesh() {
		MeshContext _localctx = new MeshContext(Context, State);
		EnterRule(_localctx, 16, RULE_mesh);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			Match(T__7);
			State = 152;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
